fix scrollbar

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -79,8 +79,9 @@ a {
 	padding: 0;
 }
 
-.dropdown {
+.m-p-nill {
 	padding: 0;
+	margin: 0;
 }
 
 .dropdown ul {
